--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,16 @@ before_install:
 script:
   - docker run ryanmcalister/docker-react npm run test -- --coverage
 
-
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-553408972566"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
+    
